# shadcn-rs

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  LICENSE-APACHE  LICENSE-MIT  PROJECT_STATUS.md  QUICK_REFERENCE.md  README.md
.github/workflows/: ci.yml  deploy-showcase.yml
ai/: 00-decisions-summary.md  01-project-scope.prd  02-implementation-tasks.md  03-architecture.md  04-open-questions.md  05-component-patterns.md
docs/: accessibility.md  installation.md  theming.md
shadcn-icons/: Cargo.toml
shadcn-icons/src/: lib.rs
shadcn-rs/: Cargo.toml
shadcn-rs/src/: lib.rs
shadcn-rs/src/components/: accordion.rs  alert.rs  alert_dialog.rs  aspect_ratio.rs  avatar.rs  badge.rs  breadcrumb.rs  button.rs  button_group.rs  calendar.rs  card.rs  carousel.rs  chart.rs  checkbox.rs  collapsible.rs  combobox.rs  command.rs  context_menu.rs  data_table.rs  date_picker.rs  dialog.rs  drawer.rs  dropdown_menu.rs  empty.rs  field.rs  form.rs  hover_card.rs  input.rs  input_group.rs  input_otp.rs  item.rs  kbd.rs  label.rs  menubar.rs  mod.rs  native_select.rs  navigation_menu.rs  pagination.rs  popover.rs  progress.rs  (+20 more)
shadcn-rs/src/hooks/: mod.rs  use_click_outside.rs  use_controllable_state.rs  use_escape_key.rs  use_toggle.rs
shadcn-rs/src/types/: alignment.rs  color.rs  mod.rs  position.rs  size.rs  variant.rs
shadcn-rs/src/utils/: aria.rs  class_name.rs  mod.rs  portal.rs  touch.rs
shadcn-rs/styles/: base.css  components.css  shadcn-rs.css  utilities.css
shadcn-showcase/: Cargo.toml  Trunk.toml  index.html  showcase.css
shadcn-showcase/src/: main.rs  routes.rs
shadcn-showcase/src/components/: code_block.rs  component_page.rs  mod.rs  sidebar.rs  theme_toggle.rs
shadcn-showcase/src/pages/: home.rs  mod.rs  not_found.rs
shadcn-showcase/src/pages/components/: accordion_page.rs  alert_dialog_page.rs  alert_page.rs  aspect_ratio_page.rs  avatar_page.rs  badge_page.rs  breadcrumb_page.rs  button_group_page.rs  button_page.rs  calendar_page.rs  card_page.rs  carousel_page.rs  chart_page.rs  checkbox_page.rs  collapsible_page.rs  combobox_page.rs  command_page.rs  context_menu_page.rs  data_table_page.rs  date_picker_page.rs  dialog_page.rs  drawer_page.rs  dropdown_menu_page.rs  empty_page.rs  field_page.rs  form_page.rs  hover_card_page.rs  input_group_page.rs  input_otp_page.rs  input_page.rs  item_page.rs  kbd_page.rs  label_page.rs  menubar_page.rs  mod.rs  native_select_page.rs  navigation_menu_page.rs  pagination_page.rs  popover_page.rs  progress_page.rs  (+20 more)
shadcn-showcase/src/pages/getting_started/: accessibility.rs  installation.rs  migration.rs  mod.rs  quick_start.rs  theming.rs
