[package]
name = "shadcn-showcase"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Interactive showcase for shadcn-rs components"

[dependencies]
yew = { workspace = true, features = ["csr"] }
yew-router = { workspace = true }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true, features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "Navigator",
    "Clipboard",
    "Storage",
    "MediaQueryList",
] }
gloo = { workspace = true }
wasm-bindgen-futures = { workspace = true }
shadcn-rs = { path = "../shadcn-rs" }
shadcn-icons = { path = "../shadcn-icons" }
